tests/valid/enum/ref_lifetime_constructor.facet
enum RefBox<'a> {
  Ref(unrestricted &'a unrestricted isize),
  Empty
}

fn make<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted RefBox<'a> {
  RefBox<'a>::Ref(r)
}
