tests/invalid/enum/outlives_bound_constructor_missing.facet
enum NeedsOutlives<'a, 'b> where 'a: 'b {
  Empty
}

fn bad<'a, 'b>() -> unrestricted NeedsOutlives<'a, 'b> {
  NeedsOutlives<'a, 'b>::Empty()
}
